[tool.poetry]
name = "flask-video-streaming"
version = "0.1.0"
description = ""
authors = ["Long Xu <xulongnr@gmail.com>"]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
itsdangerous = "^1.1.0"
click = "^6.7"
Jinja2 = "^2.11.2"
MarkupSafe = "^1.1.1"
Werkzeug = "^1.0.1"
redisqueue = "^0.1.5"
gphoto2 = "^2.2.2"
flask_swagger = "^0.2.14"
flask_swagger_ui = "^3.25.0"
Pillow = "^7.2.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
